src/objects/Rep_Security__c.object
<CustomObject>
    <fields>
        <fullName>Davenport_Username__c</fullName>
        <label>Davenport Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <label>GroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Number__c</fullName>
        <label>Rep Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Security_Key__c</fullName>
        <externalId>true</externalId>
        <label>Rep Security Key</label>
        <length>84</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Rep Securities</relationshipLabel>
        <relationshipName>Rep_Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rep</fullName>
                    <default>true</default>
                    <label>Rep</label>
                </value>
                <value>
                    <fullName>UPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rep_Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rep Security</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rep_Number__c</columns>
        <columns>Rep_Security_Key__c</columns>
        <columns>Type__c</columns>
        <columns>Davenport_Username__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Davenport_Username__c</field>
            <operation>equals</operation>
            <value>jmcelhaney</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Rep</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rep Security Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rep Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>